@@ -396,6 +396,83 @@ DECLARE_MKX_FLOAT(KaxVideoFrameRate)
 public:
   filepos_t RenderData(IOCallback & output, bool bForceRender, bool bSaveDefault);
 };
+
+DECLARE_MKX_MASTER(KaxVideoColour)
+};
+
+
+DECLARE_MKX_UINTEGER(KaxVideoColourMatrix)
+};
+
+DECLARE_MKX_UINTEGER(KaxVideoBitsPerChannel)
+};
+
+DECLARE_MKX_UINTEGER(KaxVideoChromaSubsampHorz)
+};
+
+DECLARE_MKX_UINTEGER(KaxVideoChromaSubsampVert)
+};
+
+DECLARE_MKX_UINTEGER(KaxVideoCbSubsampHorz)
+};
+
+DECLARE_MKX_UINTEGER(KaxVideoCbSubsampVert)
+};
+
+DECLARE_MKX_UINTEGER(KaxVideoChromaSitHorz)
+};
+
+DECLARE_MKX_UINTEGER(KaxVideoChromaSitVert)
+};
+
+DECLARE_MKX_UINTEGER(KaxVideoColourRange)
+};
+
+DECLARE_MKX_UINTEGER(KaxVideoColourTransferCharacter)
+};
+
+DECLARE_MKX_UINTEGER(KaxVideoColourPrimaries)
+};
+
+DECLARE_MKX_UINTEGER(KaxVideoColourMaxCLL)
+};
+
+DECLARE_MKX_UINTEGER(KaxVideoColourMaxFALL)
+};
+
+DECLARE_MKX_MASTER(KaxVideoColourMasterMeta)
+};
+
+
+DECLARE_MKX_FLOAT(KaxVideoRChromaX)
+};
+
+DECLARE_MKX_FLOAT(KaxVideoRChromaY)
+};
+
+DECLARE_MKX_FLOAT(KaxVideoGChromaX)
+};
+
+DECLARE_MKX_FLOAT(KaxVideoGChromaY)
+};
+
+DECLARE_MKX_FLOAT(KaxVideoBChromaX)
+};
+
+DECLARE_MKX_FLOAT(KaxVideoBChromaY)
+};
+
+DECLARE_MKX_FLOAT(KaxVideoWhitePointChromaX)
+};
+
+DECLARE_MKX_FLOAT(KaxVideoWhitePointChromaY)
+};
+
+DECLARE_MKX_FLOAT(KaxVideoLuminanceMax)
+};
+
+DECLARE_MKX_FLOAT(KaxVideoLuminanceMin)
+};
 #endif
 
 DECLARE_MKX_MASTER(KaxTrackAudio)
