@@ -1,3 +1,7 @@
+2016-04-24  Moritz Bunkus  <moritz@bunkus.org>
+
+        * KaxSemantic: add new colour-related elements.
+
 2016-04-01  Steve Lhomme  <slhomme@matroska.org>
 
         * KaxSemantic: add the new FieldOrder element.
